# MusicGen

./: .gitattributes  .gitignore  finetune.ipynb  inference.ipynb  main.py  pyproject.toml
outputs/musicgen-lora/checkpoint-200/: adapter_config.json  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
outputs/musicgen-lora/final_model/: adapter_model.safetensors
outputs/musicgen-lora/initial_lora/: README.md  adapter_model.safetensors
wandb/: latest-run
wandb/run-20250526_202119-8o1vwm83/: run-8o1vwm83.wandb
wandb/run-20250526_202119-8o1vwm83/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
