[project]
name = "musicgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "datetime>=5.5",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "librosa>=0.11.0",
    "nbformat>=5.10.4",
    "peft>=0.15.2",
    "scipy>=1.15.3",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers[torch]>=4.52.3",
    "wandb[media]>=0.19.11",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.uv.sources]
torch = [
    { index = "pytorch" },
]
torchvision = [
    { index = "pytorch" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
